[package]
name = "rpgtool"
version = "0.1.0"
authors = ["Bartłomiej Kuras <hash.deb@gmail.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
diesel = { version = "0.16.0", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
r2d2 = "0.7.0"
r2d2-diesel = "0.16.0"
clap = "2.26.2"
maud = { version = "0.17.1", features = ["rocket"] }
rust-argon2 = "0.2.0"
chrono = "0.4"
rand = "0.3"
